NSG_All_violation.json
{
    "$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {},
    "resources": [{
	  "name": "testNSG-Template",
	  "type": "Microsoft.Network/networkSecurityGroups",
	  "apiVersion": "2018-11-01",
	  "location": "westeurope",
	  "tags": {},
	  "properties": {
	    "securityRules": [
	      {
	        "id": "/subscriptions/dc960d72-efdf-4b89-adb8-4c78eb969c83/resourceGroups/config-audit-resource-group/providers/Microsoft.Network/networkSecurityGroups/testNSG-Template/securityRules/testRule1",
	        "properties": {
	          "protocol": "UDP",
	          "sourcePortRange": "3389",
	          "destinationPortRange": "3389",
	          "sourceAddressPrefix": "*",
	          "destinationAddressPrefix": "*",
	          "access": "Allow",
	          "priority": 100,
	          "direction": "Inbound"
	        },
	        "name": "test-RDP"
	      },
	      {
	        "id": "/subscriptions/dc960d72-efdf-4b89-adb8-4c78eb969c83/resourceGroups/config-audit-resource-group/providers/Microsoft.Network/networkSecurityGroups/testNSG-Template/securityRules/testRule2",
	        "properties": {
	          "protocol": "UDP",
	          "sourcePortRange": "22",
	          "destinationPortRange": "22",
	          "sourceAddressPrefix": "*",
	          "destinationAddressPrefix": "*",
	          "access": "Allow",
	          "priority": 101,
	          "direction": "Inbound"
	        },
	        "name": "test-SSH"
	      },
	      {
	        "id": "/subscriptions/dc960d72-efdf-4b89-adb8-4c78eb969c83/resourceGroups/config-audit-resource-group/providers/Microsoft.Network/networkSecurityGroups/testNSG-Template/securityRules/testRule3",
	        "properties": {
	          "protocol": "UDP",
	          "sourcePortRange": "23",
	          "destinationPortRange": "23",
	          "sourceAddressPrefix": "*",
	          "destinationAddressPrefix": "*",
	          "access": "Allow",
	          "priority": 102,
	          "direction": "Inbound"
	        },
	        "name": "test-Telnet"
	      },
		  {
	        "id": "/subscriptions/dc960d72-efdf-4b89-adb8-4c78eb969c83/resourceGroups/config-audit-resource-group/providers/Microsoft.Network/networkSecurityGroups/testNSG-Template/securityRules/testRule4",
	        "properties": {
	          "protocol": "UDP",
	          "sourcePortRange": "445",
	          "destinationPortRange": "445",
	          "sourceAddressPrefix": "*",
	          "destinationAddressPrefix": "*",
	          "access": "Allow",
	          "priority": 103,
	          "direction": "Inbound"
	        },
	        "name": "test-CIFS"
	      },
	      {
	        "id": "/subscriptions/dc960d72-efdf-4b89-adb8-4c78eb969c83/resourceGroups/config-audit-resource-group/providers/Microsoft.Network/networkSecurityGroups/testNSG-Template/securityRules/testRule5",
	        "properties": {
	          "protocol": "UDP",
	          "sourcePortRange": "53",
	          "destinationPortRange": "53",
	          "sourceAddressPrefix": "*",
	          "destinationAddressPrefix": "*",
	          "access": "Allow",
	          "priority": 104,
	          "direction": "Inbound"
	        },
	        "name": "test-DNS"
	      },
	      {
	        "id": "/subscriptions/dc960d72-efdf-4b89-adb8-4c78eb969c83/resourceGroups/config-audit-resource-group/providers/Microsoft.Network/networkSecurityGroups/testNSG-Template/securityRules/testRule6",
	        "properties": {
	          "protocol": "UDP",
	          "sourcePortRange": "20",
	          "destinationPortRange": "20",
	          "sourceAddressPrefix": "*",
	          "destinationAddressPrefix": "*",
	          "access": "Allow",
	          "priority": 105,
	          "direction": "Inbound"
	        },
	        "name": "test-FTP"
	      },
	      {
	        "id": "/subscriptions/dc960d72-efdf-4b89-adb8-4c78eb969c83/resourceGroups/config-audit-resource-group/providers/Microsoft.Network/networkSecurityGroups/testNSG-Template/securityRules/testRule7",
	        "properties": {
	          "protocol": "UDP",
	          "sourcePortRange": "27017",
	          "destinationPortRange": "27017",
	          "sourceAddressPrefix": "*",
	          "destinationAddressPrefix": "*",
	          "access": "Allow",
	          "priority": 106,
	          "direction": "Inbound"
	        },
	        "name": "test-MongoDB"
	      },
	      {
	        "id": "/subscriptions/dc960d72-efdf-4b89-adb8-4c78eb969c83/resourceGroups/config-audit-resource-group/providers/Microsoft.Network/networkSecurityGroups/testNSG-Template/securityRules/testRule8",
	        "properties": {
	          "protocol": "TCP",
	          "sourcePortRange": "1433",
	          "destinationPortRange": "1433",
	          "sourceAddressPrefix": "*",
	          "destinationAddressPrefix": "*",
	          "access": "Allow",
	          "priority": 107,
	          "direction": "Inbound"
	        },
	        "name": "test-MSSQL-TCP"
	      },
	      {
	        "id": "/subscriptions/dc960d72-efdf-4b89-adb8-4c78eb969c83/resourceGroups/config-audit-resource-group/providers/Microsoft.Network/networkSecurityGroups/testNSG-Template/securityRules/testRule117",
	        "properties": {
	          "protocol": "TCP",
	          "sourcePortRange": "3306",
	          "destinationPortRange": "3306",
	          "sourceAddressPrefix": "*",
	          "destinationAddressPrefix": "*",
	          "access": "Allow",
	          "priority": 117,
	          "direction": "Inbound"
	        },
	        "name": "test-MYSQL"
	      },
	      {
	        "id": "/subscriptions/dc960d72-efdf-4b89-adb8-4c78eb969c83/resourceGroups/config-audit-resource-group/providers/Microsoft.Network/networkSecurityGroups/testNSG-Template/securityRules/testRule16",
	        "properties": {
	          "protocol": "UDP",
	          "sourcePortRange": "1434",
	          "destinationPortRange": "1434",
	          "sourceAddressPrefix": "*",
	          "destinationAddressPrefix": "*",
	          "access": "Allow",
	          "priority": 116,
	          "direction": "Inbound"
	        },
	        "name": "test-MSSQL-UDP"
	      },
	      {
	        "id": "/subscriptions/dc960d72-efdf-4b89-adb8-4c78eb969c83/resourceGroups/config-audit-resource-group/providers/Microsoft.Network/networkSecurityGroups/testNSG-Template/securityRules/testRule9",
	        "properties": {
	          "protocol": "UDP",
	          "sourcePortRange": "137",
	          "destinationPortRange": "138",
	          "sourceAddressPrefix": "*",
	          "destinationAddressPrefix": "*",
	          "access": "Allow",
	          "priority": 108,
	          "direction": "Inbound"
	        },
	        "name": "test-NetBIOS-UDP"
	      },
	      {
	        "id": "/subscriptions/dc960d72-efdf-4b89-adb8-4c78eb969c83/resourceGroups/config-audit-resource-group/providers/Microsoft.Network/networkSecurityGroups/testNSG-Template/securityRules/testRule10",
	        "properties": {
	          "protocol": "TCP",
	          "sourcePortRange": "139",
	          "destinationPortRange": "139",
	          "sourceAddressPrefix": "*",
	          "destinationAddressPrefix": "*",
	          "access": "Allow",
	          "priority": 109,
	          "direction": "Inbound"
	        },
	        "name": "test-NetBIOS-TCP"
	      },
	      {
	        "id": "/subscriptions/dc960d72-efdf-4b89-adb8-4c78eb969c83/resourceGroups/config-audit-resource-group/providers/Microsoft.Network/networkSecurityGroups/testNSG-Template/securityRules/testRule11",
	        "properties": {
	          "protocol": "TCP",
	          "sourcePortRange": "1521",
	          "destinationPortRange": "1521",
	          "sourceAddressPrefix": "*",
	          "destinationAddressPrefix": "*",
	          "access": "Allow",
	          "priority": 110,
	          "direction": "Inbound"
	        },
	        "name": "test-ORACLE"
	      },
	      {
	        "id": "/subscriptions/dc960d72-efdf-4b89-adb8-4c78eb969c83/resourceGroups/config-audit-resource-group/providers/Microsoft.Network/networkSecurityGroups/testNSG-Template/securityRules/testRule12",
	        "properties": {
	          "protocol": "TCP",
	          "sourcePortRange": "5432",
	          "destinationPortRange": "5432",
	          "sourceAddressPrefix": "*",
	          "destinationAddressPrefix": "*",
	          "access": "Allow",
	          "priority": 111,
	          "direction": "Inbound"
	        },
	        "name": "test-PostgreSQL"
	      },
	      {
	        "id": "/subscriptions/dc960d72-efdf-4b89-adb8-4c78eb969c83/resourceGroups/config-audit-resource-group/providers/Microsoft.Network/networkSecurityGroups/testNSG-Template/securityRules/testRule13",
	        "properties": {
	          "protocol": "TCP",
	          "sourcePortRange": "135",
	          "destinationPortRange": "135",
	          "sourceAddressPrefix": "*",
	          "destinationAddressPrefix": "*",
	          "access": "Allow",
	          "priority": 112,
	          "direction": "Inbound"
	        },
	        "name": "test-RPC"
	      },
	      {
	        "id": "/subscriptions/dc960d72-efdf-4b89-adb8-4c78eb969c83/resourceGroups/config-audit-resource-group/providers/Microsoft.Network/networkSecurityGroups/testNSG-Template/securityRules/testRule14",
	        "properties": {
	          "protocol": "*",
	          "sourcePortRange": "80",
	          "destinationPortRange": "80",
	          "sourceAddressPrefix": "*",
	          "destinationAddressPrefix": "*",
	          "access": "Allow",
	          "priority": 113,
	          "direction": "Inbound"
	        },
	        "name": "test-HTTP"
	      },
	      {
	        "id": "/subscriptions/dc960d72-efdf-4b89-adb8-4c78eb969c83/resourceGroups/config-audit-resource-group/providers/Microsoft.Network/networkSecurityGroups/testNSG-Template/securityRules/testRule18",
	        "properties": {
	          "protocol": "*",
	          "sourcePortRange": "25",
	          "destinationPortRange": "25",
	          "sourceAddressPrefix": "*",
	          "destinationAddressPrefix": "*",
	          "access": "Allow",
	          "priority": 118,
	          "direction": "Inbound"
	        },
	        "name": "test-SMTP"
	      },
	      {
	        "id": "/subscriptions/dc960d72-efdf-4b89-adb8-4c78eb969c83/resourceGroups/config-audit-resource-group/providers/Microsoft.Network/networkSecurityGroups/testNSG-Template/securityRules/testRule15",
	        "properties": {
	          "protocol": "UDP",
	          "sourcePortRange": "5500",
	          "destinationPortRange": "5500",
	          "sourceAddressPrefix": "*",
	          "destinationAddressPrefix": "*",
	          "access": "Allow",
	          "priority": 114,
	          "direction": "Inbound"
	        },
	        "name": "test-VNC"
	      },
	      {
	        "id": "/subscriptions/dc960d72-efdf-4b89-adb8-4c78eb969c83/resourceGroups/config-audit-resource-group/providers/Microsoft.Network/networkSecurityGroups/testNSG-Template/securityRules/testRule30",
	        "properties": {
	          "protocol": "ICMP",
	          "sourcePortRange": "3200",
	          "destinationPortRange": "2300",
	          "sourceAddressPrefix": "*",
	          "destinationAddressPrefix": "*",
	          "access": "Allow",
	          "priority": 130,
	          "direction": "Inbound"
	        },
	        "name": "test-port-config"
	      }
	    ],
	    "resourceGuid": "ff83cbfa-074a-4fef-9357-a78dbe943e4f"
	  },
	  "resources": []
	}]
}
